tests/neg/i4820c.scala
trait Foo[A]
class Bar[A] extends Foo // error